--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>CSS Practice</title>
+    <style>
+      /* p { color: orange } */
+    </style>
+    <link rel="stylesheet" href="default.css">
   </head>
   <body>
+    <!-- <p style="color: violet;">Hello world!</p> -->
     <p>Hello world!</p>
   </body>
 </html>
